# ProjectLily-rs

./: .gitignore  Cargo.toml  README.md
agents/: Sarica.json
grammar/: command.gbnf
migrations/2024-01-23-120308_create_chat_log/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/actions/: action.rs  mod.rs  statemachine.rs
src/agent/: container.rs  error.rs  mod.rs  settings.rs  statemachine.rs
src/commands/: mod.rs  recall_memory.rs  save_memory.rs  say.rs  think.rs
src/communications/: discord.rs  mod.rs
src/llm/: llama_cpp.rs  mod.rs  settings.rs
src/mem_db/: embedding.rs  error.rs  io.rs  log.rs  mod.rs  vector.rs
src/mem_db/models/: chat_log.rs  mod.rs
src/prompt/: action.rs  consts.rs  format.rs  log.rs  message.rs  mod.rs  severity.rs  subprocess.rs
