[package]
name = "project_lily"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
chrono = "0.4.31"
clap = { version = "4.4.13", features = ["derive", "wrap_help"] }
clap_derive = "4.4.7"
itertools = "0.12.0"
kdtree = "0.7.0"
reqwest = "0.11.23"
rust-bert = "0.21.0"
serenity = "0.12.0"
shlex = "1.2.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tch = "0.13.0"
lazy_static = "1.4.0"
json = "0.12.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
log = "0.4.20"
pretty_env_logger = "0.5.0"
diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
